updated css and js to reference www assets

--- a/newsroom.html
+++ b/newsroom.html
@@ -28,14 +28,14 @@
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 
 <!-- CDN -->
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-<link href='//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="/media/prod/bowercomponents/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" media="screen" href="/media/assets/css/main-2015.css" />
-<link rel="stylesheet" type="text/css" media="print" href="/media/assets/css/print.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="main2016.css" />
+<link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -45,15 +45,15 @@
 
 <!-- Fav and touch icons -->
 
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/media/assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/media/assets/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/media/assets/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="/media/assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="/media/assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
+<link rel="shortcut icon" href="https://msudenver.edu/media/assets/ico/favicon.png">
 
 
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
-<script type="text/javascript" src="/media/prod/bowercomponents/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 
 <!-- HeaderCode -->
 
@@ -131,7 +131,7 @@
       <!-- MSU DENVER LOGO -->
         <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
           <a href="/">
-<img class="img-responsive center-block" src="/media/assets/branding/MSUDenver_50th_Formal.png" alt="MSU Denver Formal Logo">
+<img class="img-responsive center-block" src="https://msudenver.edu/media/assets/branding/MSUDenver_50th_Formal.png" alt="MSU Denver Formal Logo">
             </a>
         </div>
         <!-- ENDS MSU DENVER LOGO -->
@@ -172,7 +172,7 @@
 
 <h4>May 17, 2016</h4>
 <section class='Newsroom-image'> <figure class="thumbnail" id="109765" style="max-width : 500px;" >
-<img class="img-responsive" src='/media/content/newsroom/stories/2016/may/Kirsten-Morrison-web.jpg' alt='Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.'/>
+<img class="img-responsive" src='https://msudenver.edu/media/content/newsroom/stories/2016/may/Kirsten-Morrison-web.jpg' alt='Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.'/>
 <figcaption class="caption">Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.</figcaption>
 </figure> </section>
 <p>
@@ -187,7 +187,7 @@
 <p>And with seven national student design awards in her pocket, including being named second best designer in the country from College Media Business and Advertising Managers, Morrison is definitely thriving.</p>
 <p>&ldquo;She is an incredible designer who consistently creates amazing solutions with an eye for design that is extremely advanced for how far along she is in school,&rdquo; said Kathleen Jewby, production manager at Met Media.</p>
 <p>Now a senior designer after two years with Met Media, Morrison trains junior designers and works with internal and external clients both on and off campus to create advertising, identity systems and marketing materials.</p>
-<p>Take <a href="https://fs22.formsite.com/cmaforms/files/f-33-778-7918850_yhICwFmw_MSUDenver_MediaKit.pdf">Met Media&rsquo;s media kit</a>, the first project Morrison was assigned when she started the job. It&rsquo;s one of her favorite projects not only because of what she learned but because she was able to take charge of the whole design. And her hard work paid off, winning herself and Met Media a first place 2015 Associated Collegiate Press award for a rate card and a second place 2015 College Media Association Pinnacle award for best rate card/media kit.</p>
+<p>Take <a href="https://fs22.formsite.com/cmaforms/files/f-33-778-7918850_yhICwFmw_MSUDenver_MediaKit.pdf">Met Media&rsquo;s media kit</a>, the first project Morrison was assigned when she started the job. It&rsquo;s one of her favorite projects not only because of what she learned but because she was able to take charge of the whole design. And her hard work paid off, winning herself and Met Media a first place 2015 Associated Collegiate Press award for a rate card and a second place 2015 College Media Association Pinnacle award for best rate cardhttps://msudenver.edu/media kit.</p>
 <p>Or, another example, the 24th annual <a href="https://fs22.formsite.com/cmaforms/files/f-33-522-7918850_pTjcmrNJ_MSUDenver_DisplayCMYK.pdf">Martin Luther King Jr. Peace Breakfast</a>. Morrison said she was honored to create the event&rsquo;s logo, program, marketing materials and an advertisement, which won her three awards in 2015: a first place CMBAM award for color display ad, and two second place display ad awards from ACP and CMA.</p>
 <p>Yet despite all the recognition her hard work has given her, Morrison said winning the awards is not her main goal.</p>
 <p>&ldquo;I just find myself driven to put out my best work, no matter what the project,&rdquo; Morrison said. &ldquo;I feel really humbled by it all, and I&rsquo;m really grateful to have been given such amazing opportunities.&rdquo;</p>
@@ -267,7 +267,7 @@
 <li><a href="http://www.msudenver.edu/collcom/@metro/previoius_issues.htm">2003 - 2005</a></li>
 
 </ul>
-</li><li><a href="/newsroom/topics/">Topics</a></li><li><a href="/newsroom/pressreleases/">Press Releases</a></li><li><a href="/newsroom/dailyclips/">Daily News Clips</a></li><li><a href="/experts/">Faculty Experts Guide</a></li><li><a href="/newsroom/mediaresources/">Media Resources</a></li><li><a href="/speakersbureau/" target="_blank">Speakers Bureau</a></li><li><a href="/newsroom/studentpublications/">Student Publications</a></li><li><a href="/newsroom/contactus/">Contact Us</a></li></ul>
+</li><li><a href="/newsroom/topics/">Topics</a></li><li><a href="/newsroom/pressreleases/">Press Releases</a></li><li><a href="/newsroom/dailyclips/">Daily News Clips</a></li><li><a href="/experts/">Faculty Experts Guide</a></li><li><a href="/newsroomhttps://msudenver.edu/mediaresources/">Media Resources</a></li><li><a href="/speakersbureau/" target="_blank">Speakers Bureau</a></li><li><a href="/newsroom/studentpublications/">Student Publications</a></li><li><a href="/newsroom/contactus/">Contact Us</a></li></ul>
             </div>
         </div>
     </div>
@@ -279,7 +279,7 @@
 
 </div>
 <!-- sidemenu.js  -->
-<script type="text/javascript" src="/media/prod/js/sidemenu.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
 
 
 <!-- ENDS LEFT SIDE (LINK COLUMN/SIDEMENU) -->
@@ -313,7 +313,7 @@
 	<div class="col-md-4 col-sm-4 col-xs-12">
             <p>
 
-                <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right; margin-right:50px;" alt="College Portrait">
+                <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right; margin-right:50px;" alt="College Portrait">
                  </a>
                   <a href="/privacy">Privacy Statement</a> <br>
                   <a href="http://tops.state.co.us/">Colorado TOPS</a>
@@ -328,13 +328,13 @@
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- modernizr -->
-<script type="text/javascript" src="/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- bootstrap.js -->
-<script type="text/javascript" src="/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- console.polyfill -->
-<script type="text/javascript" src="/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
 <!-- main.min.js -->
-<script type="text/javascript" src="/media/prod/js/main.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 <!-- google analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
