--- a/newsroom.html
+++ b/newsroom.html
@@ -194,8 +194,10 @@
 <p>And she said she has Met Media to thank for that.</p>
 <p>&ldquo;I know that without working there, and working with such a talented group of people, I would not be in the position I am today,&rdquo; said Morrison. &ldquo;I&rsquo;d especially like to thank all the graphic designers I&rsquo;ve worked with throughout my time there. Every single one of them has been so beyond talented, and it pushes me to try and be better every day.&rdquo;</p>
 <div class="row">
+
     <h3 class="pager col-lg-12 col-md-12 col-sm-12 col-xm-12">
-        &larr; Newer   -   <a href="/newsroom/news/2016/may/17-phishing-technology.shtml" title="17-phishing-technology" >Previous &rarr;</a>
+        <i class="fa fa-angle-left"></i>
+         Newer   -   <a href="/newsroom/news/2016/may/17-phishing-technology.shtml" title="17-phishing-technology" >Previous <i class="fa fa-angle-right"></i></a>
     </h3>
 </div>
     <div id="disqus_thread"></div>
