--- a/newsroom.html
+++ b/newsroom.html
@@ -66,11 +66,9 @@
   <a href="#content" class="sr-only">Skip to main content</a>
 
 <!-- BEGINS LOGO + QUICK-LINKS -->
-<div class="container">
+<div class="container-fluid">
     <!-- Logo and QuickLInks -->
-    <div class="row">
         <!-- QUICKLINKS TOOLBAR -->
-        <div class="col-lg-12">
             <div class="navbar navbar-static-top navbar-inverse toolbar">
                 <div class="navbar-header">
                     <a class="navbar-brand visible-xs" href="#" data-toggle="collapse" data-target=".navbar-collapse">QUICK LINKS</a>
@@ -83,7 +81,7 @@
                 </div>
 
                 <div class="navbar-collapse collapse">
-                  <div class="col-lg-5 col-md-7 col-sm-12">
+                  <div class="col-xs-12 col-md-7 col-lg-5 ">
                     <ul class="nav navbar-nav">
                       <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
                       <li class="quicktools"><a href="/facstaff">Faculty & Staff</a></li>
@@ -92,7 +90,7 @@
                       <li class="quicktools"><a href="/a_to_z">A to Z</a></li>
                   	</ul>
                   	</div>
-                  	<div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
+                  <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
                         <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
                           <div class="input-group">
                             <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
@@ -104,10 +102,9 @@
                               <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
                               </span>
                            </div>
-						</form>
-                        </div>
-
-                        <section class="col-lg-3 col-md-12 col-sm-6 col-xs-12 nav navbar-nav nav-social text-center">
+						            </form>
+                  </div>
+                        <section class="col-xs-12 col-sm-6 col-md-12 col-lg-3 nav navbar-nav nav-social text-center">
                         <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook"></i></a>
 						<a href="http://twitter.com/msudenver"><i class="fa fa-twitter"></i></a>
                       	<a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
@@ -118,9 +115,6 @@
                 </div>
                 <!--/.nav-collapse -->
             </div>
-        </div>
-
-    </div>
 </div>
 <!-- ENDS LOGO + QUICK-LINKS -->
 
