--- a/newsroom.html
+++ b/newsroom.html
@@ -64,65 +64,57 @@
 
 <body>
   <a href="#content" class="sr-only">Skip to main content</a>
+  <div class="container-fluid">
+          <!-- QUICKLINKS TOOLBAR -->
+          <div class="navbar navbar-static-top toolbar">
+              <div class="navbar-header">
+                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                      <span class="sr-only">Toggle quick links navigation</span>
+                      <span class="fa fa-bars"></span>
+                  </button>
+                  <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
 
-<!-- BEGINS LOGO + QUICK-LINKS -->
-<div class="container">
-    <!-- Logo and QuickLInks -->
-    <div class="row">
-        <!-- QUICKLINKS TOOLBAR -->
-        <div class="col-lg-12">
-            <div class="navbar navbar-static-top navbar-inverse toolbar">
-                <div class="navbar-header">
-                    <a class="navbar-brand visible-xs" href="#" data-toggle="collapse" data-target=".navbar-collapse">QUICK LINKS</a>
-                    <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle quick links navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
+              </div>
+
+              <div class="navbar-collapse collapse">
+
+                <div class="col-xs-12 col-md-6 col-lg-6">
+                  <ul class="nav navbar-nav navbar-center">
+                    <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
+                    <li class="quicktools"><a href="/facstaff">Faculty & Staff</a></li>
+                    <li class="quicktools"><a href="http://library.auraria.edu">Library</a></li>
+                    <li class="quicktools"><a href="/giving">Support Us</a></li>
+                    <li class="quicktools"><a href="/maps">Maps</a></li>
+
+                  </ul>
                 </div>
 
-                <div class="navbar-collapse collapse">
-                  <div class="col-lg-5 col-md-7 col-sm-12">
-                    <ul class="nav navbar-nav">
-                      <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
-                      <li class="quicktools"><a href="/facstaff">Faculty & Staff</a></li>
-                      <li class="quicktools"><a href="http://library.auraria.edu">Library</a></li>
-                      <li class="quicktools"><a href="/maps">Maps</a></li>
-                      <li class="quicktools"><a href="/a_to_z">A to Z</a></li>
-                  	</ul>
-                  	</div>
-                  	<div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
-                        <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
-                          <div class="input-group">
-                            <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
-							<input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
-							<input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
-						    <label for="q" class="sr-only">Search MSU Denver site</label>
-                            <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                      <form class="custom-search-input" role="search" action="http://www.msudenver.edu/a_to_z/search">
+                        <div class="input-group">
+                          <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
+            <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
+            <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
+              <label for="q" class="sr-only">Search MSU Denver site</label>
+                          <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
                           <span class="input-group-btn">
-                              <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
-                              </span>
-                           </div>
-						</form>
-                        </div>
+                            <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
+                          </span>
+                         </div>
+          </form>
+                   </div>
 
-                        <section class="col-lg-3 col-md-12 col-sm-6 col-xs-12 nav navbar-nav nav-social text-center">
-                        <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook"></i></a>
-						<a href="http://twitter.com/msudenver"><i class="fa fa-twitter"></i></a>
-                      	<a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
-						<a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube"></i></a>
-						<a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
-                        </section>
-
-                </div>
-                <!--/.nav-collapse -->
-            </div>
-        </div>
-
-    </div>
-</div>
-<!-- ENDS LOGO + QUICK-LINKS -->
+                      <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center">
+                      <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook"></i></a>
+          <a href="http://twitter.com/msudenver"><i class="fa fa-twitter"></i></a>
+                      <a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
+          <a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube"></i></a>
+          <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
+                      </section>
+              </div>
+              <!--/.nav-collapse -->
+          </div>
+  </div>
 
 
 <!-- BEGINS BREADCRUMBS + SITEHEADER -->
@@ -237,7 +229,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-3 col-lg-pull-9 col-md-3 col-md-pull-9 col-sm-4 col-sm-pull-8">
+                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
 
 <!-- BEGINS LEFT SIDE (LINK COLUMN -/- SIDEMENU) -->
 <div class="sidebar-nav">
@@ -249,7 +241,6 @@
         </a>
         <div id="menu">
             <div class="pure-menu pure-menu-open">
-                <a class="pure-menu-heading visible-xs" href="#">SIDE MENU</a>
                 <ul class="nav nav-list"><li><a href="/newsroom/">Home</a></li><li><span class="currentbranch0"><a href="/newsroom/news/">All News/Archive</a></span>
 <ul class="multilevel-linkul-0">
 <li><span class="currentbranch1"><a href="/newsroom/news/2016/">2016</a></span>
@@ -293,40 +284,30 @@
         </div>
     </div>
 
-<!-- BEGINS  FOOTER -->
-<div class="container">
-    <div class="row footer">
+    <!-- BEGINS  FOOTER -->
+    <div class="container-fluid">
+        <div class="row footer">
+          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-9 campus-info">
+                <p>
+                  <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
+                  <a href="/maps">Student Success Building, 890 Auraria Pkwy <br>
+                    Denver, CO 80204 </a> <br>
+                    <a href="/contact">Contact Us:</a> <a href="tel:303-556-5740"> 303-556-5740</a>
+                </p>
+            </div>
 
-      <div class="col-md-4 col-sm-4 col-xs-12 campus-info">
-            <p>
-              	<a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=32020&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a>
-                <a href="/">Metropolitan State University of Denver</a><br>
-                <a href="/contact">CONTACT US</a> | 303-556-5740
-            </p>
+    	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                <p>
+                  <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a> Metropolitan State University of Denver <br>
+                      <a href="/privacy">Privacy, Terms and Conditions</a> <br>
+                    <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right;" alt="College Portrait">
+                     </a>
+                    <br>
+                </p>
+            </div>
         </div>
-
-              <div class="col-md-4 col-sm-6 col-xs-12 campus-info">
-            <p>Auraria Campus Police: 303-556-5000<br>
-                Inclement Weather Line: 1-877-556-3637
-            </p>
-        </div>
-
-
-	<div class="col-md-4 col-sm-4 col-xs-12">
-            <p>
-
-                <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right; margin-right:50px;" alt="College Portrait">
-                 </a>
-                  <a href="/privacy">Privacy Statement</a> <br>
-                  <a href="http://tops.state.co.us/">Colorado TOPS</a>
-                <br>
-            </p>
-        </div>
-
-
     </div>
-</div>
-<!-- ENDS FOOTER -->
+    <!-- ENDS FOOTER -->
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- modernizr -->
