--- a/newsroom.html
+++ b/newsroom.html
@@ -229,7 +229,7 @@
 
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
+                <div class="col-sm-4 col-sm-pull-8 col-md-3 col-md-pull-9 col-lg-3 col-lg-pull-9">
 
 <!-- BEGINS LEFT SIDE (LINK COLUMN -/- SIDEMENU) -->
 <div class="sidebar-nav">
