adds byline and date to story html

--- a/newsroom.html
+++ b/newsroom.html
@@ -161,19 +161,13 @@
 </style>
 <!-- Story - text/sfulltext-->
 <h2>Decorated designer</h2>
-
-<h4>May 17, 2016</h4>
-<section class='Newsroom-image'> <figure class="thumbnail" id="109765" style="max-width : 500px;" >
+<h3>She is an incredible designer who consistently creates amazing solutions</h3>
+<section class="byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></section>
+<hr>
+<section class='Newsroom-image'> <figure class="thumbnail" id="109765" >
 <img class="img-responsive" src='https://msudenver.edu/media/content/newsroom/stories/2016/may/Kirsten-Morrison-web.jpg' alt='Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.'/>
 <figcaption class="caption">Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.</figcaption>
 </figure> </section>
-<p>
-    <a href="mailto:">
-
-    </a>
-</p>
-
-
 <p>After just a few months working for <a href="http://mymetmedia.com/">Met Media</a>, Kristen Morrison, a communication design major slated to graduate in December 2016, felt like she was at the top of her class &ndash; at least in terms of what she was learning. Because of her job, Morrison was already familiar with many of the design tools covered in her classes.</p>
 <p>&ldquo;Feeling and being ahead of the game has not only allowed me to thrive when it comes to my design coursework, but it has drastically improved my confidence in myself and what I do,&rdquo; said Morrison.</p>
 <p>And with seven national student design awards in her pocket, including being named second best designer in the country from College Media Business and Advertising Managers, Morrison is definitely thriving.</p>
