fixes alignment on footer

--- a/newsroom.html
+++ b/newsroom.html
@@ -281,7 +281,8 @@
     <!-- BEGINS  FOOTER -->
     <div class="container-fluid">
         <div class="row footer">
-          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-9 campus-info">
+          <div class="container">
+          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 campus-info">
                 <p>
                   <a href="/"><strong>Metropolitan State University of Denver</strong></a><br>
                   <a href="/maps">Student Success Building, 890 Auraria Pkwy <br>
@@ -290,7 +291,7 @@
                 </p>
             </div>
 
-    	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+    	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <p>
                   <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a> Metropolitan State University of Denver <br>
                       <a href="/privacy">Privacy, Terms and Conditions</a> <br>
@@ -299,6 +300,7 @@
                     <br>
                 </p>
             </div>
+          </div>
         </div>
     </div>
     <!-- ENDS FOOTER -->
