updates metadata with t4 tags

--- a/newsroom.html
+++ b/newsroom.html
@@ -13,17 +13,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>May | Newsroom | MSU Denver</title>
+
+<title><t4 type='title' /> | <t4 type='navigation' id='524' /> | MSU Denver</title>
+
 <!-- Meta Data -->
-<meta name="description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor’s and master’s degrees in downtown Denver, Colorado"/>
-
-<meta name="keywords" content="denver, colorado, college, university, degree, masters">
-
-
-
-<meta name="og:title" content="Decorated designer" />
-<meta name="og:description" content="Senior Kristen Morrison takes graphic designing to an award-winning level." />
-<meta name="keywords" content="Current Students, College of Professional Studies" />
+<t4 type="navigation" id="504" />
+<t4 type="meta" id="1"/>
+<t4 type="meta" id="2"/>
+<t4 type="meta" id="3"/>
+<t4 type="meta" id="4"/>
+<t4 type="meta" id="5"/>
+<t4 type="meta" id="6"/>
+<t4 type="meta" id="7"/>
+<t4 type="meta" id="8"/>
+<t4 type="meta" id="9"/>
+<t4 type="meta" id="10"/>
+<t4 type="meta" id="11"/>
+<t4 type="meta" id="12"/>
+<t4 type="meta" id="13"/>
+<t4 type="meta" id="14"/>
+<t4 type="meta" id="15"/>
+<t4 type="meta" id="16"/>
 
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 
