--- a/newsroom.html
+++ b/newsroom.html
@@ -46,6 +46,9 @@
 <!-- CSS -->
 <link rel="stylesheet" type="text/css" media="screen" href="main2016.css" />
 <link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
+<!-- T4 CSS -->
+<t4 type="media" id="109887"/>
+<t4 type="media" id="61332"/>
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
