updates favicon with t4 tags

--- a/newsroom.html
+++ b/newsroom.html
@@ -56,22 +56,15 @@
                 <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"></script>
 <![endif]-->
 
-<!-- Fav and touch icons -->
-
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="https://msudenver.edu/media/assets/ico/favicon.png">
-
-
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 
-<!-- HeaderCode -->
-
-<!-- ENDS MUlTIPLE COL DEPS SPECIFICS -->
-
+<!-- Fav and touch icons -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="<t4 type='media' id='60992' formatter='image/path'/>">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="<t4 type='media' id='60991' formatter='image/path'/>">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="<t4 type='media' id='60990' formatter='image/path'/>">
+<link rel="apple-touch-icon-precomposed" href="<t4 type='media' id='60989' formatter='image/path'/>">
+<link rel="shortcut icon" href="<t4 type='media' id='60993' formatter='image/path'/>">
 
 </head>
 
