--- a/newsroom.html
+++ b/newsroom.html
@@ -87,7 +87,7 @@
                 <div class="col-xs-12 col-md-6 col-lg-6">
                   <ul class="nav navbar-nav navbar-center">
                     <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
-                    <li class="quicktools"><a href="/facstaff">Faculty & Staff</a></li>
+                    <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
                     <li class="quicktools"><a href="http://library.auraria.edu">Library</a></li>
                     <li class="quicktools"><a href="/giving">Support Us</a></li>
                     <li class="quicktools"><a href="/maps">Maps</a></li>
