adds t4 tag for image

--- a/newsroom.html
+++ b/newsroom.html
@@ -79,6 +79,7 @@
                       <span class="fa fa-bars"></span>
                   </button>
                   <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
+                  <!-- <img class="navbar-brand hidden-md hidden-lg img-responsive" src="<t4 type='media' id='105951' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
 
               </div>
 
