updates html code for logo

--- a/newsroom.html
+++ b/newsroom.html
@@ -130,7 +130,8 @@
       <!-- MSU DENVER LOGO -->
         <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
           <a href="/">
-<img class="img-responsive center-block" src="https://msudenver.edu/media/assets/branding/MSUDenver_50th_Formal.png" alt="MSU Denver Formal Logo">
+<img class="img-responsive center-block hidden-xs hidden-sm" src="media/assets/msudenver_logo.png" alt="MSU Denver Formal Logo">
+<!-- <img class="img-responsive center-block hidden-xs hidden-sm" src="<t4 type='media' id='91275' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
             </a>
         </div>
         <!-- ENDS MSU DENVER LOGO -->
