--- a/newsroom.html
+++ b/newsroom.html
@@ -148,7 +148,7 @@
        <!-- BREADCRUMBS -->
         <ul class="breadcrumb">
             <a href="/">MSU Denver Home</a>&nbsp;/&nbsp;<a href="/newsroom/">Newsroom</a>&nbsp;/&nbsp;<a href="/newsroom/news/">All News/Archive</a>&nbsp;/&nbsp;<a href="/newsroom/news/2016/">2016</a>&nbsp;/&nbsp;May
-
+            <t4 type='navigation' id='89' />
         </ul>
       </div>
   </div>
