--- a/newsroom.html
+++ b/newsroom.html
@@ -144,7 +144,7 @@
       </div>
     </div>
     <div class="row">
-     <div class="col-lg-12">
+     <div class="col-xs-12">
        <!-- BREADCRUMBS -->
         <ul class="breadcrumb">
             <a href="/">MSU Denver Home</a>&nbsp;/&nbsp;<a href="/newsroom/">Newsroom</a>&nbsp;/&nbsp;<a href="/newsroom/news/">All News/Archive</a>&nbsp;/&nbsp;<a href="/newsroom/news/2016/">2016</a>&nbsp;/&nbsp;May
