--- a/newsroom.html
+++ b/newsroom.html
@@ -324,18 +324,11 @@
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
 <!-- main.min.js -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
+
 <!-- google analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-505529-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+<t4 type="navigation" id="103" />
 <!-- FooterCode -->
+<t4 type='navigation' id='804' />
 
 <!-- ENDS SECOND DEPENDENCY INCLUDE -->
     <script type="text/javascript">
