--- a/newsroom.html
+++ b/newsroom.html
@@ -161,8 +161,7 @@
                 <div class="col-lg-push-3 col-lg-9 col-md-9 col-md-push-3 col-sm-8 col-sm-push-4">
                    <div class="content row">
 <!-- BEGINS HERO IMAGE -->
-
-<!-- ENDS HERO IMAGE -->
+<t4 type="navigation" id="106" />
 
                         <!-- *********************************  -->
                         <!-- SITEMANAGER HEADER ENDS HERE -->
