adds t4 tag for side nav and sample content

--- a/newsroom.html
+++ b/newsroom.html
@@ -268,10 +268,35 @@
     </div>
 </div>
 <div class="linkcolumn">
-    <!-- text/linkcol -->
-
-
-
+   <t4 type='navigation' id='104' />
+   <a role="button" class="btn btn-lg custombtn rowdyred col-xs-12" href="/brandcentral/shareyourstory/"  >
+<span  style="float:left;" ><span></span>SHARE YOUR STORY
+</span>
+</a><!-- linkcol -->
+<a role="button" class="btn btn-lg custombtn rowdyblue col-xs-12" href="/events/"  >
+<span  style="float:left;" ><span></span>EVENTS CALENDAR
+</span>
+</a><div class="well col-xs-12">
+<h4>Newsroom Search</h4>
+  <form action="//www.msudenver.edu/newsroom/search/" class="form-search">
+	<input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" />
+	<input type="hidden" name="cof" value="FORID:11" />
+	<input type="hidden" name="ie" value="UTF-8" />
+    <input type="text" name="q" class="input-small"/>
+    <button type="submit" class="btn btn-default btn-small">Search</button>
+</form>
+</div><div class="row">
+<div class="col-xs-12">
+<div class="panel panel-default clickable" data-href="">
+  <div class="panel-heading">Media Contact:</div>
+    <div class="panel-body" style="height:100%">
+      <p>Tim Carroll, APR<br />Assistant Director of Media Relations<br />303-556-5136<br /><a href="mailto:carrollt@msudenver.edu">carrollt@msudenver.edu</a></p>
+<p>Julie Lucas<br />Senior Director of Integrated Marketing and Communications<br />303-352-7390<br /><a href="mailto:jlucas13@msudenver.edu">jlucas13@msudenver.edu</a></p>
+<p>Cathy Lucas, APR<br />Associate to the President for Marketing and Communications,&nbsp;<br />Chief of Staff&nbsp;<br />303-556-5131<br /><a href="mailto:lucascat@msudenver.edu">lucascat@msudenver.edu</a></p>
+    </div>
+  </div>
+ </div>
+</div>
 </div>
 <!-- sidemenu.js  -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
