--- a/newsroom.html
+++ b/newsroom.html
@@ -337,13 +337,19 @@
     <!-- ENDS FOOTER -->
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
-<!-- modernizr -->
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
-<!-- bootstrap.js -->
+<!-- sidemenu.js  -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
+<t4 type="media" id="70446" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- console.polyfill -->
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+<!-- JS Files -->
+<!-- modernizr --><t4 type="media" id="70442" />
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<!-- console.polyfill --><t4 type="media" id="70439" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
-<!-- main.min.js -->
+<!-- main.min.js --><t4 type="media" id="70445" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 
 <!-- google analytics -->
