adds t4 tag for side nav

--- a/newsroom.html
+++ b/newsroom.html
@@ -243,6 +243,8 @@
         </a>
         <div id="menu">
             <div class="pure-menu pure-menu-open">
+     <t4 type="navigation" id="784"/>
+
                 <ul class="nav nav-list"><li><a href="/newsroom/">Home</a></li><li><span class="currentbranch0"><a href="/newsroom/news/">All News/Archive</a></span>
 <ul class="multilevel-linkul-0">
 <li><span class="currentbranch1"><a href="/newsroom/news/2016/">2016</a></span>
