updates college portrait t4 tag

--- a/newsroom.html
+++ b/newsroom.html
@@ -326,7 +326,9 @@
                 <p>
                   <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a> Metropolitan State University of Denver <br>
                       <a href="/privacy">Privacy, Terms and Conditions</a> <br>
-                    <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right;" alt="College Portrait">
+                    <a href="http://www.collegeportraits.org/CO/MSU_Denver">
+                      <img class="img-responsive college-portrait" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png"  alt="College Portrait">
+                      <!-- <img class="img-responsive college-portrait" src="<t4 type='media' id='87681' formatter='image/path'/>" alt="College Portrait"> -->
                      </a>
                     <br>
                 </p>
