updates layout version

--- a/newsroom.html
+++ b/newsroom.html
@@ -225,7 +225,10 @@
     },
   });
 </script>
-<!-- AddThis Smart Layers END --> <!-- *********************************  -->
+<!-- AddThis Smart Layers END -->
+
+
+                        <!-- *********************************  -->
                         <!-- SITEMANAGER START FOOTER -->
                         <!-- *********************************  -->
 
@@ -301,6 +304,7 @@
 </div>
 </div>
 
+</div>
 
 <!-- ENDS LEFT SIDE (LINK COLUMN/SIDEMENU) -->
 
@@ -361,7 +365,7 @@
 
 <!-- ENDS SECOND DEPENDENCY INCLUDE -->
     <script type="text/javascript">
-    var version = "0.2.0",
+    var version = "0.2.5",
         template = "Two column template";
     </script>
 
