header menu align

--- a/newsroom.html
+++ b/newsroom.html
@@ -83,6 +83,7 @@
 
               </div>
 
+            <div class="container">
               <div class="navbar-collapse collapse">
 
                 <div class="col-xs-12 col-md-6 col-lg-6">
@@ -120,6 +121,7 @@
                         <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a> 
                       </section>
               </div>
+            </div>              
               <!--/.nav-collapse -->
           </div>
   </div>
