migrates layout for presspage

--- a/newsroom.html
+++ b/newsroom.html
@@ -44,11 +44,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="main2016.css" />
-<link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
-<!-- T4 CSS -->
-<t4 type="media" id="109887"/>
-<t4 type="media" id="61332"/>
+<link rel="stylesheet" type="text/css" media="screen" href="presspage.css" />
+
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
