--- a/newsroom.html
+++ b/newsroom.html
@@ -14,26 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title><t4 type='title' /> | <t4 type='navigation' id='524' /> | MSU Denver</title>
+<title>Newsroom | MSU Denver</title>
 
 <!-- Meta Data -->
-<t4 type="navigation" id="504" />
-<t4 type="meta" id="1"/>
-<t4 type="meta" id="2"/>
-<t4 type="meta" id="3"/>
-<t4 type="meta" id="4"/>
-<t4 type="meta" id="5"/>
-<t4 type="meta" id="6"/>
-<t4 type="meta" id="7"/>
-<t4 type="meta" id="8"/>
-<t4 type="meta" id="9"/>
-<t4 type="meta" id="10"/>
-<t4 type="meta" id="11"/>
-<t4 type="meta" id="12"/>
-<t4 type="meta" id="13"/>
-<t4 type="meta" id="14"/>
-<t4 type="meta" id="15"/>
-<t4 type="meta" id="16"/>
 
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 
