--- a/newsroom.html
+++ b/newsroom.html
@@ -39,13 +39,6 @@
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 
-<!-- Fav and touch icons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="<t4 type='media' id='60992' formatter='image/path'/>">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="<t4 type='media' id='60991' formatter='image/path'/>">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="<t4 type='media' id='60990' formatter='image/path'/>">
-<link rel="apple-touch-icon-precomposed" href="<t4 type='media' id='60989' formatter='image/path'/>">
-<link rel="shortcut icon" href="<t4 type='media' id='60993' formatter='image/path'/>">
-
 </head>
 
 <body>
@@ -59,8 +52,6 @@
                       <span class="fa fa-bars"></span>
                   </button>
                   <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
-                  <!-- <img class="navbar-brand hidden-md hidden-lg img-responsive" src="<t4 type='media' id='105951' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
-
               </div>
 
             <div class="container">
@@ -114,7 +105,6 @@
         <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
           <a href="/">
 <img class="img-responsive center-block hidden-xs hidden-sm" src="media/assets/msudenver_logo.png" alt="MSU Denver Formal Logo">
-<!-- <img class="img-responsive center-block hidden-xs hidden-sm" src="<t4 type='media' id='91275' formatter='image/path'/>" alt="MSU Denver Formal Logo"> -->
             </a>
         </div>
         <!-- ENDS MSU DENVER LOGO -->
@@ -122,7 +112,6 @@
       <div class="col-lg-9 col-md-9 col-sm-12">
       <div class="siteheader">
             <h1>Newsroom</h1>
-            <h1><t4 type='navigation' id='101' /></h1>
       </div>
       </div>
     </div>
@@ -173,7 +162,7 @@
 
     <h3 class="pager col-lg-12 col-md-12 col-sm-12 col-xm-12">
         <i class="fa fa-angle-left"></i>
-         Newer   -   <a href="/newsroom/news/2016/may/17-phishing-technology.shtml" title="17-phishing-technology" >Previous <i class="fa fa-angle-right"></i></a>
+         Newer   -   <a href="#" title="17-phishing-technology" >Previous <i class="fa fa-angle-right"></i></a>
     </h3>
 </div>
     <div id="disqus_thread"></div>
@@ -245,8 +234,6 @@
 <li><a href="/newsroom/news/2015/">2015</a></li>
 <li><a href="/newsroom/news/2014/">2014</a></li>
 <li><a href="/newsroom/news/2013/">2013</a></li>
-<li><a href="http://www.msudenver.edu/collcom/artman/publish/">2005 - 2012</a></li>
-<li><a href="http://www.msudenver.edu/collcom/@metro/previoius_issues.htm">2003 - 2005</a></li>
 
 </ul>
 </li><li><a href="/newsroom/topics/">Topics</a></li><li><a href="/newsroom/pressreleases/">Press Releases</a></li><li><a href="/newsroom/dailyclips/">Daily News Clips</a></li><li><a href="/experts/">Faculty Experts Guide</a></li><li><a href="/newsroomhttps://msudenver.edu/mediaresources/">Media Resources</a></li><li><a href="/speakersbureau/" target="_blank">Speakers Bureau</a></li><li><a href="/newsroom/studentpublications/">Student Publications</a></li><li><a href="/newsroom/contactus/">Contact Us</a></li></ul>
@@ -310,12 +297,11 @@
 
     	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <p>
-                  <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=30947&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a> Metropolitan State University of Denver <br>
+                  &copy; Metropolitan State University of Denver <br>
                       <a href="/privacy">Privacy, Terms and Conditions</a> <br>
                     <a href="http://www.collegeportraits.org/CO/MSU_Denver">
                       <img class="img-responsive college-portrait" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png"  alt="College Portrait">
-                      <!-- <img class="img-responsive college-portrait" src="<t4 type='media' id='87681' formatter='image/path'/>" alt="College Portrait"> -->
-                     </a>
+                    </a>
                     <br>
                 </p>
             </div>
@@ -325,32 +311,10 @@
     <!-- ENDS FOOTER -->
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
-<!-- sidemenu.js  -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
-<t4 type="media" id="70446" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
-<!-- JS Files -->
-<!-- modernizr --><t4 type="media" id="70442" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
-<!-- console.polyfill --><t4 type="media" id="70439" />
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
-<!-- main.min.js --><t4 type="media" id="70445" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
-
-<!-- google analytics -->
-<t4 type="navigation" id="103" />
-<!-- FooterCode -->
-<t4 type='navigation' id='804' />
-
-<!-- ENDS SECOND DEPENDENCY INCLUDE -->
-    <script type="text/javascript">
-    var version = "0.2.5",
-        template = "Two column template";
-    </script>
-
 
 </body>
 
