updates some styles on newsroom

--- a/newsroom.html
+++ b/newsroom.html
@@ -141,7 +141,16 @@
 <!-- Story - text/sfulltext-->
 <h2>Decorated designer</h2>
 <h3>She is an incredible designer who consistently creates amazing solutions</h3>
-<section class="byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></section>
+<section class="row">
+<div class="col-xs-12 col-md-6 byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></div>
+<div class="col-xs-12 col-md-6 share-story-icons"><a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook"></i></a> |
+<a href="#"><i class="fa fa-twitter"></i></a> |
+<a href="#"><i class="fa fa-envelope"></i></a> |
+<a href="#"><i class="fa fa-print"></i></a> |
+<a href="#"><i class="fa fa-tumblr"></i></a> |
+<a href="#"><i class="fa fa-linkedin-square"></i></a> </div>
+
+</section>
 <hr>
 <section class='Newsroom-image'> <figure class="thumbnail" id="109765" >
 <img class="img-responsive" src='https://msudenver.edu/media/content/newsroom/stories/2016/may/Kirsten-Morrison-web.jpg' alt='Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.'/>
@@ -185,17 +194,7 @@
             <br>MSU Denver Office of Marketing and Communications, 303-556-2957</i>
     </p>
 </div>
-<!-- AddThis Smart Layers BEGIN -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50bcee997bd3c4be"></script>
-<script type="text/javascript">
-  addthis.layers({
-    'theme' : 'transparent',
-    'share' : {
-      'position' : 'right',
-      'numPreferredServices' : 6
-    },
-  });
-</script>
+
 <!-- AddThis Smart Layers END -->
 
 
