--- a/newsroom.html
+++ b/newsroom.html
@@ -54,12 +54,13 @@
                   <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
               </div>
 
-
+              <!-- <div class="container"> -->
               <div class="container-fluid">
-<!--             <div class="container-fluid"> -->
               <div class="navbar-collapse collapse">
-
-                <div class="col-xs-12 col-md-6 col-lg-6">
+                <div class="col-xs-12 col-md-2 col-lg-2">
+                </div>
+                <!-- <div class="col-xs-12 col-md-6 col-lg-6"> -->
+                <div class="col-xs-12 col-md-4 col-lg-4">                
                   <ul class="nav navbar-nav navbar-center">
                     <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
                     <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
@@ -68,7 +69,8 @@
                     <li class="quicktools"><a href="/maps">Maps</a></li>
                   </ul>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                <!-- <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"> -->
+                <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">                      
                       <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
                         <div class="input-group">
                           <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
@@ -82,16 +84,17 @@
                          </div>
                        </form>
                 </div>
-
-                      <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center">
+                      <!-- <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center"> -->
+                      <section class="col-xs-12 col-sm-6 col-md-2 col-lg-2 nav navbar-nav nav-social text-center">
                         <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook-square"></i></a>
                         <a href="http://twitter.com/msudenver"><i class="fa fa-twitter-square"></i></a>
                         <a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
                         <a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube-square"></i></a>
                         <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
-                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>
+                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>                     
                       </section>
-              </div>
+                <div class="col-md-2 col-lg-2 pull-right" style="background: #d11242; height: 48px; position: inherit;">
+                </div>                      
             </div>
               <!--/.nav-collapse -->
           </div>
