Revert "move styles to css"
This reverts commit 3507a21edcff893f967005333e2869c7e355ad45.

--- a/newsroom.html
+++ b/newsroom.html
@@ -93,7 +93,7 @@
                         <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
                         <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>                     
                       </section>
-                <div class="col-md-2 col-lg-2 pull-right right-filler">
+                <div class="col-md-2 col-lg-2 pull-right" style="background: #d11242; height: 48px; position: inherit;">
                 </div>                      
             </div>
               <!--/.nav-collapse -->
