--- a/newsroom.html
+++ b/newsroom.html
@@ -57,10 +57,10 @@
               <!-- <div class="container"> -->
               <div class="container-fluid">
               <div class="navbar-collapse collapse">
-                <div class="col-xs-12 col-md-2 col-lg-2">
+                <div class="col-md-2 col-lg-2">
                 </div>
                 <!-- <div class="col-xs-12 col-md-6 col-lg-6"> -->
-                <div class="col-xs-12 col-md-4 col-lg-4">                
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">                
                   <ul class="nav navbar-nav navbar-center">
                     <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
                     <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
@@ -70,7 +70,7 @@
                   </ul>
                 </div>
                 <!-- <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"> -->
-                <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">                      
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">                      
                       <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
                         <div class="input-group">
                           <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
@@ -85,7 +85,7 @@
                        </form>
                 </div>
                       <!-- <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center"> -->
-                      <section class="col-xs-12 col-sm-6 col-md-2 col-lg-2 nav navbar-nav nav-social text-center">
+                      <section class="col-xs-12 col-sm-11 col-md-11 col-lg-2 nav navbar-nav nav-social text-center">
                         <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook-square"></i></a>
                         <a href="http://twitter.com/msudenver"><i class="fa fa-twitter-square"></i></a>
                         <a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
@@ -93,7 +93,7 @@
                         <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
                         <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>                     
                       </section>
-                <div class="col-md-2 col-lg-2 pull-right right-filler">
+                <div class="col-xs-12 col-sm-1 col-md-1 col-lg-2 pull-right right-filler">
                 </div>                      
             </div>
               <!--/.nav-collapse -->
