--- a/newsroom.html
+++ b/newsroom.html
@@ -41,9 +41,11 @@
 
 </head>
 
+
+
 <body>
   <a href="#content" class="sr-only">Skip to main content</a>
-  <div class="container-fluid">
+  <div class="container-fluid  toolbar-background">
           <!-- QUICKLINKS TOOLBAR -->
           <div class="navbar navbar-static-top toolbar">
               <div class="navbar-header">
@@ -53,14 +55,12 @@
                   </button>
                   <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
               </div>
+              <div class="toolbar-background">
 
-              <!-- <div class="container"> -->
-              <div class="container-fluid">
+              <div class="background"></div>
+              <div class="container">
               <div class="navbar-collapse collapse">
-                <div class="col-md-2 col-lg-2">
-                </div>
-                <!-- <div class="col-xs-12 col-md-6 col-lg-6"> -->
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">                
+                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
                   <ul class="nav navbar-nav navbar-center">
                     <li class="quicktools"><a href="/studenthub"><strong>Student Hub</strong></a></li>
                     <li class="quicktools"><a href="/facstaff">Faculty &amp; Staff</a></li>
@@ -69,8 +69,7 @@
                     <li class="quicktools"><a href="/maps">Maps</a></li>
                   </ul>
                 </div>
-                <!-- <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"> -->
-                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">                      
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                       <form class="custom-search-input" role="search" action="https://www.msudenver.edu/a_to_z/search">
                         <div class="input-group">
                           <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
@@ -84,28 +83,29 @@
                          </div>
                        </form>
                 </div>
-                      <!-- <section class="col-xs-12 col-sm-6 col-md-3 col-lg-3 nav navbar-nav nav-social text-center"> -->
-                      <section class="col-xs-12 col-sm-11 col-md-11 col-lg-2 nav navbar-nav nav-social text-center">
+                  <section class="col-xs-12 col-sm-12 col-md-6 col-lg-3 nav navbar-nav nav-social">
                         <a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook-square"></i></a>
                         <a href="http://twitter.com/msudenver"><i class="fa fa-twitter-square"></i></a>
                         <a href="https://instagram.com/msudenver50"><i class="fa fa-instagram"></i></a>
                         <a href="http://www.youtube.com/user/msudenver"><i class="fa fa-youtube-square"></i></a>
                         <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
-                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>                     
+                        <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>
                       </section>
-                <div class="col-xs-12 col-sm-1 col-md-1 col-lg-2 pull-right right-filler">
-                </div>                      
+                <!-- <div class="col-xs-12 col-sm-1 col-md-1 col-lg-2 pull-right hidden-xs right-filler"> -->
+                </div>
             </div>
               <!--/.nav-collapse -->
+            </div>
           </div>
   </div>
+
 
 
 <!-- BEGINS BREADCRUMBS + SITEHEADER -->
 <div class="container">
     <div class="row">
       <!-- MSU DENVER LOGO -->
-        <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
+        <div class="col-sm-12 col-md-3 col-lg-3 msudenver_logo">
           <a href="/">
 <img class="img-responsive center-block hidden-xs hidden-sm" src="media/assets/msudenver_logo.png" alt="MSU Denver Formal Logo">
             </a>
@@ -269,7 +269,7 @@
   <input type="hidden" name="cof" value="FORID:11" />
   <input type="hidden" name="ie" value="UTF-8" />
     <input type="text" name="q" class="input-small"/>
-    <button type="submit" class="btn btn-default btn-small">Search</button> 
+    <button type="submit" class="btn btn-default btn-small">Search</button>
 </form> -->
 
 
