updates width on social

--- a/newsroom.html
+++ b/newsroom.html
@@ -145,12 +145,15 @@
 <h2>Decorated designer</h2>
 <h3>She is an incredible designer who consistently creates amazing solutions</h3>
 <section class="row">
-<div class="col-xs-12 col-md-6 byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></div>
-<div class="col-xs-12 col-md-6 share-story-icons"><a href="https://www.facebook.com/msudenver"><i class="fa fa-facebook"></i></a> |
-<a href="#"><i class="fa fa-twitter"></i></a> |
-<a href="#"><i class="fa fa-envelope"></i></a> |
-<a href="#"><i class="fa fa-print"></i></a> |
-<a href="#"><i class="fa fa-tumblr"></i></a> |
+<div class="col-xs-12 col-md-5 byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></div>
+<div class="col-xs-12 col-md-7 share-story-icons"> SHARE:
+<a href="#"><i class="fa fa-facebook"></i></a>|
+<a href="#"><i class="fa fa-twitter"></i></a>|
+<a href="#"><i class="fa fa-linkedin"></i></a>|
+<a href="#"><i class="fa fa-envelope"></i></a>|
+<a href="#"><i class="fa fa-print"></i></a>
+
+</div>
 
 </section>
 <hr>
