--- a/newsroom.html
+++ b/newsroom.html
@@ -146,7 +146,7 @@
 <h3>She is an incredible designer who consistently creates amazing solutions</h3>
 <section class="row">
 <div class="col-xs-12 col-md-5 byline"><a href="mailto:edavies@msudenver.edu">Emily Davies</a> | <span class="byline-date">May 17, 2016</span></div>
-<div class="col-xs-12 col-md-7 share-story-icons"> SHARE:
+<div class="col-xs-12 col-md-7 share-story-icons">
 <a href="#"><i class="fa fa-facebook"></i></a>|
 <a href="#"><i class="fa fa-twitter"></i></a>|
 <a href="#"><i class="fa fa-linkedin"></i></a>|
