beautifies sass html and css

--- a/newsroom.html
+++ b/newsroom.html
@@ -55,7 +55,6 @@
                 <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
             </div>
             <div class="toolbar-background">
-
                 <div class="background"></div>
                 <div class="container">
                     <div class="navbar-collapse collapse">
@@ -76,9 +75,7 @@
                                     <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
                                     <label for="q" class="sr-only">Search MSU Denver site</label>
                                     <input type="text" id="q" class="form-control" name="q" placeholder="Search MSU Denver" size="30">
-                                    <span class="input-group-btn">
-                            <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
-                          </span>
+                                    <span class="input-group-btn">     <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button></span>
                                 </div>
                             </form>
                         </div>
@@ -90,7 +87,6 @@
                             <a href="http://www.flickr.com/photos/msudenver/sets/"><i class="fa fa-flickr"></i></a>
                             <a href="https://www.linkedin.com/company/metropolitan-state-university-of-denver"><i class="fa fa-linkedin-square"></i></a>
                         </section>
-                        <!-- <div class="col-xs-12 col-sm-1 col-md-1 col-lg-2 pull-right hidden-xs right-filler"> -->
                     </div>
                 </div>
                 <!--/.nav-collapse -->
@@ -163,8 +159,8 @@
                             <figcaption class="caption">Senior communications design major Kristen Morrison has won seven national awards for her work with Met Media. PHOTO: Courtesy of Kristen Morrison.</figcaption>
                         </figure>
                     </section>
-                    <p><span class="location">Denver, CO </span>After just a few months working for <a href="http://mymetmedia.com/">Met Media</a>, Kristen Morrison, a communication design major slated to graduate in December 2016, felt like she was at the
-                        top of her class &ndash; at least in terms of what she was learning. Because of her job, Morrison was already familiar with many of the design tools covered in her classes.</p>
+                    <p><span class="location">Auraria, CO - </span>After just a few months working for <a href="http://mymetmedia.com/">Met Media</a>, Kristen Morrison, a communication design major slated to graduate in December 2016, felt like she was at
+                        the top of her class &ndash; at least in terms of what she was learning. Because of her job, Morrison was already familiar with many of the design tools covered in her classes.</p>
                     <p>&ldquo;Feeling and being ahead of the game has not only allowed me to thrive when it comes to my design coursework, but it has drastically improved my confidence in myself and what I do,&rdquo; said Morrison.</p>
                     <p>And with seven national student design awards in her pocket, including being named second best designer in the country from College Media Business and Advertising Managers, Morrison is definitely thriving.</p>
                     <p>&ldquo;She is an incredible designer who consistently creates amazing solutions with an eye for design that is extremely advanced for how far along she is in school,&rdquo; said Kathleen Jewby, production manager at Met Media.</p>
@@ -290,8 +286,6 @@
                           </span>
                             </div>
                         </form>
-
-
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
