--- a/springhome_index.html
+++ b/springhome_index.html
@@ -180,7 +180,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <div id="carousel-homepage" class="carousel slide" data-ride="carousel">
 
 
-  <div class="carousel-inner" role="listbox"><div class="item active">
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
   <a href="http://msudenver.edu/50/ourpeople/bill-nooning.shtml?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=50thpeoplehealthymove&utm_campaign=50thanniver">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160419_bill-nooning2.jpg" alt="As CEO of Provident Healthcare, MSU Denver alumnus Bill Nooning helms a network of care providers who put patients first." style="   " />
       <div class="carousel-caption Not Set">
@@ -234,7 +235,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    <span class="fa-stack fa-lg">
      <i class="fa fa-circle fa-stack-2x"></i>
      <i class="fa fa-angle-right fa-stack-1x fa-inverse"></i>
-    </span>   
+    </span>
 <span class="sr-only">Next</span>
   </a>
 </div>
