just a slack test on commit

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -58,7 +58,7 @@
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
 <link rel="shortcut icon" href="https://msudenver.edu/media/assets/ico/favicon.png">
-
+<!-- SLACK test -->
 <!-- HeaderCode -->
 
 
@@ -182,6 +182,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
+      <!-- <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"> </div> -->
   <a href="http://msudenver.edu/50/ourpeople/bill-nooning.shtml?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=50thpeoplehealthymove&utm_campaign=50thanniver">
   <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160419_bill-nooning2.jpg" alt="As CEO of Provident Healthcare, MSU Denver alumnus Bill Nooning helms a network of care providers who put patients first." style="   " />
       <div class="carousel-caption Not Set">
